Send message to multiple recipients
