# swagger_server/models_db/message.py
@@ -6,12 +6,12 @@ class Message(db.Model):
     __tablename__ = 'message'
 
     # A list of fields to be serialized
-    SERIALIZE_LIST = ['id_message', 'text', 'id_sender', 'id_receiver', 'draft', 'message_delivered', 'message_read', 'date_delivery', 'date_send']
+    SERIALIZE_LIST = ['id_message', 'text', 'id_sender', 'id_recipient', 'draft', 'message_delivered', 'message_read', 'date_delivery', 'date_send']
 
     id_message = db.Column(db.Integer, primary_key=True, autoincrement=True)
     text = db.Column(db.Unicode(128))
     id_sender = db.Column(db.Integer)
-    id_receiver = db.Column(db.Integer)
+    id_recipient = db.Column(db.Integer)
     draft = db.Column(db.Boolean, default=False)
     message_delivered = db.Column(db.Boolean, default=False)
     message_read = db.Column(db.Boolean, default=False)
