# swagger_server/swagger/swagger.yaml
@@ -250,7 +250,7 @@ components:
       - id_sender
       - message_delivered
       - message_read
-      - recipients_list
+      - id_recipient
       - text
       type: object
       properties:
@@ -262,11 +262,10 @@ components:
           type: integer
           description: Sender ID
           example: 1
-        recipients_list:
-          type: array
-          description: List of recipients IDs
-          items:
-            example: 2
+        id_recipient:
+          type: integer
+          description: Recipients ID
+          example: 2
         text:
           type: string
           description: Message text
@@ -295,9 +294,7 @@ components:
         date_delivery: 2021-11-24T00:00:00.000+00:00
         message_delivered: false
         message_read: false
-        recipients_list:
-        - 2
-        - 3
+        id_recipient: 2
         text: "Hi, how are you ?"
         id_sender: 1
     Message_post:
